# ppg-mlops

./: .gitignore  Dockerfile  Makefile  README.md  data_modeling.ipynb  dataset_creation_notebook.ipynb  locustfile.py  nohup.out  pipeline.py  ppg_sample_dataset.csv  preprocessor.py  pyproject.toml  server.py  signal_analyzer.py  test_server.py  util.py  xgb_model.json
.github/workflows/: ppg_ops.yaml
PPG_Raw_Dataset/Labels/: Total.csv  label_01_0001.csv  label_01_0002.csv  label_01_0003.csv  label_01_0004.csv  label_01_0005.csv  label_01_0006.csv  label_01_0007.csv  label_02_0001.csv  label_02_0002.csv  label_02_0003.csv  label_03_0001.csv  label_03_0002.csv  label_04_0001.csv  label_04_0002.csv  label_04_0003.csv  label_04_0004.csv  label_04_0005.csv  label_05_0001.csv  label_05_0002.csv  label_05_0003.csv  label_05_0004.csv  label_05_0005.csv  label_05_0006.csv  label_06_0001.csv  label_06_0002.csv  label_07_0001.csv  label_07_0002.csv  label_07_0003.csv  label_07_0004.csv  label_08_0001.csv  label_08_0002.csv  label_09_0001.csv  label_09_0002.csv  label_10_0001.csv  label_10_0002.csv  label_11_0001.csv  label_11_0002.csv  label_11_0003.csv  label_11_0004.csv  (+28 more)
